# BoardION

./: .dockerignore  .gitlab-ci.yml  README.md  app_boardion_plot.R  boardion.sif  docker_entrypoint.sh  dockerfile
R/: app.R
R/server/: plotChannel.R  plotRuns.R  server.R  tabComparison.R  tabGlobal.R  tabRun.R  tabRunInProgress.R  tabTest2.R
R/ui/: sideBar.R  tabComparison.R  tabGlobal.R  tabRun.R  tabRunInProgress.R  ui.R
app/: boardion.sif  boardion_app.R  dockerfile
app/server/: plotChannel.R  plotRuns.R  server.R  tabComparison.R  tabRun.R  tabRunInProgress.R
app/ui/: sideBar.R  tabComparison.R  tabRun.R  tabRunInProgress.R  ui.R
boardion_prepocess/src/: main.cpp  reads_length_map_stat.hpp
demo/: README  README.md  boardionDemo_generateFile.pl  demo-crontab  demo.sh  dockerfile
docs/: installation.md  ui.md  usage.md
prepocess/: CMakeLists.txt
prepocess/src/: channel_stat.cpp  channel_stat.hpp  main.cpp  qt_stat.cpp  qt_stat.hpp  reads_length_map_stat.cpp  runInfoStat.cpp  runInfoStat.hpp  time_step_stat.cpp  time_step_stat.hpp
preprocess/: CMakeLists.txt
preprocess/src/: channel_stat.cpp  channel_stat.hpp  main.cpp  myUtil.cpp  myUtil.hpp  qt_stat.cpp  qt_stat.hpp  read.cpp  read.hpp  reads_length_map_stat.cpp  reads_length_map_stat.hpp  runInfoStat.cpp  sequencing_summary.cpp  sequencing_summary.hpp  time_step_stat.cpp  time_step_stat.hpp
